--- a/orthogenie/mapper/pyproject.toml
+++ b/orthogenie/mapper/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "fastapi>=0.116.1",
     "folium>=0.20.0",
     "pandas>=2.3.2",
+    "uvicorn>=0.35.0",
 ]
