--- a/orthogenie/mapper/pyproject.toml
+++ b/orthogenie/mapper/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "fastapi>=0.116.1",
     "folium>=0.20.0",
     "pandas>=2.3.2",
+    "python-multipart>=0.0.20",
     "uvicorn>=0.35.0",
 ]
